[bug 884067] Interim fix for make details css not showing up on top

--- a/public/stylesheets/makedetails.css
+++ b/public/stylesheets/makedetails.css
@@ -10,6 +10,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 999999;
 }
 .make-bar-link {
   color: #27aae1;
